# numis-geek

./: .gitignore  CLAUDE.md  DESIGN-BRIEF.md  Dockerfile  INITIALSPEC.md  Makefile  OVERNIGHT-SUMMARY.md  README.md  deploy.sh  dev.sh  numis_geek.db-shm  numis_geek.db-wal  pull-from-prod.sh  push-to-prod.sh  pyproject.toml
alembic/: env.py
bolao-copa-2026/: palpites.html
docs/: code-session-kickoff.md  code-session-spec-36-37-38.md  code-session-spec-41-42.md  compound-create-pattern.md  conceptual-model.md  decision-support-rationale.md  deployment.md  design-system.md  extraction-prompts.md  next-steps.md  options-rationale.md  prototype-deltas-2026-05-23.md  session-2026-05-24-report.md  spec-36-37-38-summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
prototypes/: README.md  index.html
scripts/: audit_attachments.py  backfill_asset_price_source.py  backfill_distribution_fx_rate.py  backfill_spec56_snapshot_invested.py  bump.sh  clean_for_production.py  create_snapshot.py  fetch_notion_assets.py  fetch_notion_lancamentos.py  import_notion_assets.py  import_notion_corp_actions.py  import_notion_distributions.py  import_notion_lancamentos.py  import_notion_snapshots.py  import_ptax_from_bcb.py  seed.py  seed_notion_credentials.py  seed_options.py
specs/: 00. Foundation.md  01. User and Workspace.md  02. User Management and Profile.md  03. Audit Log and Remember Me.md  04. Financial Institutions.md  06. Assets.md  07a. Notion Asset Import.md  07b. Lançamentos and Account Assets View.md  07c. Notion Lançamento Import.md  08. AssetMovement and Distribution.md  09. Asset Cleanup.md  10. Asset Account FK Refactor.md  11. PTAX and Integration Credentials.md  12. Asset Price Update.md  13. Corporate Actions.md  14. Portfolio Snapshot.md  15. Dashboard v2.md  16. Frontend Shell Rebuild.md  16. Notion Sync.md  17. Opções B3.md  17a. Dashboard Reskin.md  17b. Ativos Reskin.md  17c. Lancamentos Reskin.md  17d. Auth Profile Admin Reskin.md  18. Frontend Shell Cleanup.md  19. Attachments and FI country.md  20. Portfolio.md  21. Distributions.md  22. Asset Price Source and Freshness.md  23. Price Refresh API.md  (+41 more)
(+313 files in other folders)
