[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "numis-geek"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "bcrypt>=4.0",
    "python-dotenv>=1.0",
    "pyjwt>=2.8",
    "fastapi>=0.111",
    "pydantic[email]>=2.0",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10,<4",
    "holidays>=0.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Spec 38 + 48 — Anthropic Claude for snapshot extraction. Optional because
# the extraction service falls back to a stub when the SDK is missing.
# Pillow tiles large images before sending to the API (Anthropic's 8000px cap).
# openpyxl converts XLSX uploads to CSV-like text before sending.
llm = [
    "anthropic>=0.40",
    "Pillow>=10.0",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
